--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif ;
 }
 h1{
     font-size: 50px;
 }
 .name{
-    color: rgba(235, 19, 55, 0.774);
+    color: orangered;
 }
 .half-width{
     width: 40%;
@@ -15,4 +16,21 @@ h1{
 }
 .half-width img{
 width: 100%;
+}
+.top-banner{
+ 
+    background-repeat: no-repeat;
+    background-image: url("image/header-bg.png");
+}
+section{
+    height: 600px;
+}
+.link-button{
+    text-decoration: none;
+    background-color: orangered;
+    background-image: linear-gradient(90deg, lightSalmon,  tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
 }
