--- a/style.css
+++ b/style.css
@@ -39,14 +39,31 @@ section{
     background-repeat: no-repeat;
     background-image: url("image/biography-bg.png");
 }
-.quarter-width{
-    width: 5%;
-    margin-right: 2%;
-    padding-left: 2%;
-}
-.quarter-width{
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 2px;
+  }
+  .column {
+    padding: 0 8px;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .column {
+    float: left;
+    width: 25%;
+  }
+    
+  .column img {
+    margin-top: 8px;
+    
     width: 100%;
-}
+  
 .letest-banner{
     background-repeat: no-repeat;
     background-image: url("image/latest-work-bg.png");
@@ -54,4 +71,7 @@ section{
 .footer-banner{
     background-image: url(image/footer-bg.png);
     background-repeat: no-repeat;
+}
+div.text-align{
+    text-align: center;
 }
